# collective.ttwpo

./: .gitignore  .travis.yml  CHANGES.rst  LICENSE.rst  MANIFEST.in  README.rst  buildout.cfg  setup.cfg  setup.py
docs/: index.rst
src/collective/ttwpo/: __init__.py  api.py  configure.zcml  gettextmessagecatalog.py  interfaces.py  register.py  setuphandlers.py  storage.py  testing.py  translationdomain.py
src/collective/ttwpo/browser/: configure.zcml  controlpanel.pt  controlpanel.py  manage.pt  manage.py
src/collective/ttwpo/locales/: update.sh
src/collective/ttwpo/profiles/default/: browserlayer.xml  controlpanel.xml
src/collective/ttwpo/profiles/uninstall/: browserlayer.xml  controlpanel.xml
src/collective/ttwpo/syncer/: configure.zcml  zanata.py
src/collective/ttwpo/tests/: data.py  test_api.py  test_gettextmsgcat.py  test_register.py  test_setup.py  test_storage.py  test_translationdomain.py
src/collective/zanata/: __init__.py  api.html  api.py  configure.zcml  gettextmessagecatalog.py  interfaces.py  register.py  setuphandlers.py  storage.py  testing.py  translationdomain.py  zanataclient.py  zanatarestapi.yaml
src/collective/zanata/browser/: configure.zcml
src/collective/zanata/locales/: update.sh
src/collective/zanata/profiles/default/: browserlayer.xml
src/collective/zanata/profiles/uninstall/: browserlayer.xml
src/collective/zanata/tests/: data.py  test_api.py  test_gettextmsgcat.py  test_register.py  test_restclient.py  test_setup.py  test_storage.py  test_translationdomain.py
