[metadata]
name = collective.ttwpo
version = 1.0a1.dev0
description = Manage your PO Translation Files TTW and Sync with Translationservices
long_description = file: README.rst, CHANGELOG.rst, LICENSE.rst
keywords = Python Plone Translation PO gettext ttwpo
author = Jens W. Klein
author_email = jk@kleinundpartner.at
url = https://pypi.python.org/pypi/collective.ttwpo
license = GNU General Public License v2 (GPLv2)
classifiers =
    Environment :: Web Environment
    Framework :: Plone
    Framework :: Plone :: 5.1
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)

[options]
include_package_data = True
install_requires =
    plone.api
    products.cmfplone
    python-gettext
    setuptools
namespace_packages = collective
# thanks to this bug
# https://github.com/pypa/setuptools/issues/1136
# the following line w/o override in setup.py does not work.
package_dir =
    = src
packages = find:
zip_safe = False

[options.packages.find]
where =
    src

[options.extras_require]
zanata =
    pyzanata
test =
    plone.app.testing
    plone.app.robotframework[debug]
    plone.app.contenttypes[test]
dev =
    pdbpp

[options.entry_points]
z3c.autoinclude.plugin =
    target = plone

[check-manifest]
ignore =
    *.cfg
    .coveragerc
    .editorconfig
    .gitattributes
    bootstrap-buildout.py

[isort]
# for details see
# http://docs.plone.org/develop/styleguide/python.html#grouping-and-sorting
force_alphabetical_sort = True
force_single_line = True
lines_after_imports = 2
line_length = 200
not_skip = __init__.py
